part3/confs/nspaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: argocd-server
#   namespace: argocd
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: argocd-server
#   template:
#     metadata:
#       labels:
#         app: argocd-server
#     spec:
#       containers:
#         - name: argocd-server
#           image: argoproj/argocd:v2.5.1
#           ports:
#             - containerPort: 8080
