part3/confs/argocd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-svc
  namespace: argocd
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: argocd
